--- a/.github/workflows/buildx.yml
+++ b/.github/workflows/buildx.yml
@@ -30,6 +30,13 @@ jobs:
           username: ${{ env.DOCKERHUB_USER }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
       -
+        name: Login to ghcr.io
+        uses: docker/login-action@v2
+        with:
+          registry: ghcr.io
+          username: ${{ github.repository_owner }}
+          password: ${{ secrets.GHCR_PAT }}
+      -
         name: Get Variables
         id: vars
         run: |
@@ -47,6 +54,9 @@ jobs:
             ${{ env.IMAGE_NAME }}:latest
             ${{ env.IMAGE_NAME }}:${{ env.COMMIT_HASH }}
             ${{ env.IMAGE_NAME }}:${{ env.BUILD_TIMESTAMP }}
+            ghcr.io/${{ env.IMAGE_NAME }}:latest
+            ghcr.io/${{ env.IMAGE_NAME }}:${{ env.COMMIT_HASH }}
+            ghcr.io/${{ env.IMAGE_NAME }}:${{ env.BUILD_TIMESTAMP }}
           platforms: linux/amd64,linux/arm64
           build-args: |
             VERSION=${{ env.COMMIT_HASH }}
