--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,7 +5,7 @@ server:
 
 spring:
   datasource:
-    url: jdbc:mysql://${DB_URL:blogdb:3306}/skyscape?useUnicode=true&characterEncoding=UTF-8
+    url: jdbc:mysql://${DB_URL:mariadb:3306}/skyscape?useUnicode=true&characterEncoding=UTF-8
     username: ${DB_USER:skyscape}
     password: ${DB_PASS:skyscape!!}
     driver-class-name: com.mysql.cj.jdbc.Driver
