--- a/pom.xml
+++ b/pom.xml
@@ -79,7 +79,11 @@
             <artifactId>springdoc-openapi-data-rest</artifactId>
             <version>1.6.6</version>
         </dependency>
-
+        <dependency>
+            <groupId>com.slack.api</groupId>
+            <artifactId>bolt</artifactId>
+            <version>1.37.0</version>
+        </dependency>
         <dependency>
             <groupId>org.jsoup</groupId>
             <artifactId>jsoup</artifactId>
