--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -97,3 +97,7 @@ springdoc:
   default-produces-media-type: application/json
   swagger-ui:
     path: /swagger-ui
+
+# slack
+slack:
+  token: ${SLACK_BOT_TOKEN:xoxb-xxxxxxxxxxxx-xxxxxxxxxxxx-xxxxxxxxxxxxxxxxxxxxxxxx}
