--- a/pom.xml
+++ b/pom.xml
@@ -123,6 +123,13 @@
         </dependency>
 
         <dependency>
+            <groupId>io.github.motolies</groupId>
+            <artifactId>common</artifactId>
+            <version>0.0.3</version>
+        </dependency>
+
+
+        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
@@ -131,6 +138,12 @@
             <groupId>org.springframework.security</groupId>
             <artifactId>spring-security-test</artifactId>
             <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>io.github.motolies</groupId>
+            <artifactId>common</artifactId>
+            <version>0.0.3</version>
+            <scope>compile</scope>
         </dependency>
     </dependencies>
 
