--- a/pom.xml
+++ b/pom.xml
@@ -121,13 +121,18 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-redis</artifactId>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/org.apache.commons/commons-collections4 -->
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-collections4</artifactId>
+            <version>4.4</version>
+        </dependency>
 
         <dependency>
             <groupId>io.github.motolies</groupId>
             <artifactId>common</artifactId>
-            <version>0.0.3</version>
+            <version>0.0.2</version>
         </dependency>
-
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -139,12 +144,7 @@
             <artifactId>spring-security-test</artifactId>
             <scope>test</scope>
         </dependency>
-        <dependency>
-            <groupId>io.github.motolies</groupId>
-            <artifactId>common</artifactId>
-            <version>0.0.3</version>
-            <scope>compile</scope>
-        </dependency>
+
     </dependencies>
 
     <build>
