--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,7 @@
     <dependency>
       <groupId>io.github.motolies</groupId>
       <artifactId>common</artifactId>
-      <version>0.0.5</version>
+      <version>0.0.6</version>
     </dependency>
 
     <dependency>
@@ -160,6 +160,12 @@
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-properties-migrator</artifactId>
       <scope>runtime</scope>
+    </dependency>
+    <dependency>
+      <groupId>io.github.motolies</groupId>
+      <artifactId>common</artifactId>
+      <version>0.0.6</version>
+      <scope>compile</scope>
     </dependency>
 
   </dependencies>
